Closed Bug 1809764 Opened 2 years ago Closed 2 years ago

Webpage causes tab to consume ever-growing amounts of memory and does not render

Categories

(Core :: Layout: Columns, defect, P2)

Firefox 110
defect

Tracking

()

VERIFIED FIXED
111 Branch
Performance Impact ?
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- wontfix
firefox110 --- wontfix
firefox111 --- verified
firefox112 --- verified

People

(Reporter: mah, Assigned: TYLin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

I initially filed this as https://github.com/webcompat/web-bugs/issues/116682 but I'm pretty sure this is something in Firefox, not a web page that just isn't working right.

The page at https://ballotpedia.org/Arkansas_Supreme_Court does not work in Firefox, but works in other browsers.

In firefox, the browser spins and spins. Opening about:processes shows that memory usage is growing continuously.

Other pages on the site function ok.

Looks like we're in some kind of degenerate layout case:

https://share.firefox.dev/3QCnMkK

Performance Impact: --- → ?
Component: Untriaged → Layout
Product: Firefox → Core

I Just tried to load the page in 111.0a1 (2023-01-17) and it worked.

Has there been a change in the code that could have targeted this?

Flags: needinfo?(mconley)

I can repro, there's a bunch of multicol reflow on the stack, I think we're getting stuck in column balancing... Ting-Yu, any chance you can take a look?

Flags: needinfo?(aethanyc)

File that seems to repro the issue locally.

I think this is a bug in the multicol code since virtually all time is spent under FindBestBalanceBSize. I tried to get a regression range but it's weird because it sometimes works... I can try later.

Severity: -- → S2
Component: Layout → Layout: Columns
Priority: -- → P2

Set release status flags based on info from the regressing bug 793686

Flags: needinfo?(mconley)

I think we're getting stuck in column balancing... Ting-Yu, any chance you can take a look?

Yes, we are stuck in column balancing loop with a nested multi-column layout where the inner multi-column contains a tall break-inside:avoid element. (Keep the NI as a reminder to look deeper into the problem.)

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED

The only difference between multicol-nested-030.html and
multicol-nested-031.html is the column-fill property on the outer column.

WARNING: loading 030.html and 031.html without this patch can trap Firefox in
infinite loops.

Depends on D169004

Flags: needinfo?(aethanyc)
Attachment #9316212 - Attachment description: Bug 1809764 Part 2 - Ignore "break-inside:avoid" for content in a nested top-of-page multicol. r?emilio → Bug 1809764 Part 2 - Ignore "break-inside:avoid" for content in a nested top-of-page multicol in last balancing reflow. r?emilio
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/156cb3db4033 Part 1 - Add more COLUMN_SET_LOG to debug nested multicols. r=emilio https://hg.mozilla.org/integration/autoland/rev/cdd9f798f751 Part 2 - Ignore "break-inside:avoid" for content in a nested top-of-page multicol in last balancing reflow. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/38386 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Upstream PR merged by moz-wptsync-bot
Duplicate of this bug: 1756202
No longer duplicate of this bug: 1756202
Duplicate of this bug: 1756202
Regressions: 1816574
Flags: qe-verify+

Reproducible on a 2023-01-20 Nightly build on macOS 12.
Verified as fixed on Firefox 111.0b5(build ID: 20230223185944) and Nightly 112.0a1(build ID: 20230223172038) on macOS 12, Windows 11, Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1833523
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: