Bug 1809764 Part 1 - Add more COLUMN_SET_LOG to debug nested multicols. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D169004